welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:-7: error: not found: value inOrderEqual
 val res = inOrderEqual( t.getParameter(0).asInstanceOf[Int], t.getParameter(1).asInstanceOf[Int], t.getParameter(2).asInstanceOf[Int], t.getParameter(3).asInstanceOf[Boolean]);
           ^inOrderEqual:2: error: not found: value equalOk
  if (equalOk==true){
      ^